Update: Section Header

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 
 <body>
 
+    <header>
+        <nav class="flex-space flex-wrap">
+            <div>
+                <img src="svg/bikcraft.svg" class="logo" alt="Bikcraft" />
+            </div>
+            <ul class="menu flex-start-row">
+                <li><a href="">Bicicletas</a></li>
+                <li><a href="">Seguros</a></li>
+                <li><a href="">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
 </body>
 
 </html>
