Update: Section Hero

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+    <!-- =========== SECTION HEADER =========== -->
     <header>
         <nav class="flex-space flex-wrap">
             <div>
@@ -24,6 +24,22 @@
             </ul>
         </nav>
     </header>
+
+    <!-- =========== SECTION HERO =========== -->
+    <section class="bg-black-dark shaddow-white">
+        <main class="container p-0">
+            <div class="row flex-center hero">
+                <div class="grid-6 p-0">
+                    <h1 class="color-white bold">Bicicletas feitas sob medida<span>.</span></h1>
+                    <p class="color-gray mt-4">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                    <a href="" class="btn uppercase mt-3">Selecione a sua</a>
+                </div>
+                <div class="grid-6 p-0 mb-0 img-hero">
+                    <img src="img/img-hero.png" alt="Bike" />
+                </div>
+            </div>
+        </main>
+    </section>
 
 </body>
 
