Update: Section Bikes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div>
                 <img src="svg/bikcraft.svg" class="logo" alt="Bikcraft" />
             </div>
-            <ul class="menu flex-start-row">
+            <ul class="menu flex-start-row flex-wrap">
                 <li><a href="">Bicicletas</a></li>
                 <li><a href="">Seguros</a></li>
                 <li><a href="">Contato</a></li>
@@ -31,7 +31,7 @@
             <div class="row flex-center hero">
                 <div class="grid-6 p-0">
                     <h1 class="color-white bold">Bicicletas feitas sob medida<span>.</span></h1>
-                    <p class="color-gray mt-4">Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+                    <p class="color-gray mt-4">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
                     <a href="" class="btn uppercase mt-3">Selecione a sua</a>
                 </div>
                 <div class="grid-6 p-0 mb-0 img-hero">
@@ -39,6 +39,38 @@
                 </div>
             </div>
         </main>
+    </section>
+
+    <!-- =========== SECTION BIKES =========== -->
+    <section class="container">
+        <h1 class="color-black bold ml-1">escolha a sua<span>.</span></h1>
+
+        <div class="row mt-5">
+            <div class="grid-4 p-0 card-bike">
+                <img src="img/bike-magic-might.png" alt="Magic Might" />
+                <div class="mt-2 ml-3">
+                    <h4 class="color-black bold relative">Magic Might</h4>
+                    <p>R$ 2499</p>
+                </div>
+            </div>
+            
+            <div class="grid-4 p-0 card-bike">
+                <img src="img/bike-nimbus-stark.png" alt="Nimbus Stark" />
+                <div class="mt-2 ml-3">
+                    <h4 class="color-black bold relative">Nimbus Stark</h4>
+                    <p>R$ 2499</p>
+                </div>
+            </div>
+
+            <div class="grid-4 p-0 card-bike">
+                <img src="img/bike-nebula-cosmic.png" alt="Nebula Cosmic" />
+                <div class="mt-2 ml-3">
+                    <h4 class="color-black bold relative">Nebula Cosmic</h4>
+                    <p>R$ 2499</p>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 </body>
