--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </section>
 
     <!-- =========== SECTION BIKES =========== -->
-    <section class="container">
+    <section class="container bikes">
         <h1 class="color-black bold ml-1">escolha a sua<span>.</span></h1>
 
         <div class="row mt-5">
@@ -53,7 +53,7 @@
                     <p>R$ 2499</p>
                 </div>
             </div>
-            
+
             <div class="grid-4 p-0 card-bike">
                 <img src="img/bike-nimbus-stark.png" alt="Nimbus Stark" />
                 <div class="mt-2 ml-3">
@@ -72,6 +72,40 @@
         </div>
 
     </section>
+
+    <!-- =========== SECTION TECNOLOGIA =========== -->
+    <section class="bg-black-dark shaddow-white-full">
+        <div class="container tecnologia p-0">
+            <div class="row flex-space">
+                <div class="grid-6">
+                    <div>
+                        <p class="p1 color-gray uppercase">Tecnologia Avançada</p>
+                        <h1 class="color-white bold mt-3 fix-title">você escolhe as suas cores e componentes<span>.</span></h1>
+                        <p class="color-gray my-4">Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+                        <a href="" class="link uppercase">Escolha um modelo</a>
+                    </div>
+
+                    <div class="flex-start-row mt-7 tecnologia-info">  
+                        <div>
+                            <img src="svg/icon-eletrica.svg" class="icon" />
+                            <h5 class="color-white bold my-1">Motor Elétrico</h5>
+                            <p class="color-gray">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
+                        </div>
+
+                        <div>
+                            <img src="svg/icon-rastreador.svg" class="icon" />
+                            <h5 class="color-white bold my-1">Rastreador</h5>
+                            <p class="color-gray">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
+                        </div>                        
+                    </div>
+                </div>
+                <div class="grid-6 p-0 disappear">
+                    <img src="img/img-diferencial.png" alt="Ferramentas" />
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
