Update: Section Parceiros

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- =========== SECTION BIKES =========== -->
     <section class="container bikes">
-        <h1 class="color-black bold ml-1">escolha a sua<span>.</span></h1>
+        <h1 class="color-black bold">escolha a sua<span>.</span></h1>
 
         <div class="row mt-5">
             <div class="grid-4 p-0 card-bike">
@@ -74,7 +74,7 @@
     </section>
 
     <!-- =========== SECTION TECNOLOGIA =========== -->
-    <section class="bg-black-dark shaddow-white-full">
+    <section class="bg-black-dark-soft shaddow-white-full">
         <div class="container tecnologia p-0">
             <div class="row flex-space">
                 <div class="grid-6">
@@ -85,7 +85,7 @@
                         <a href="" class="link uppercase">Escolha um modelo</a>
                     </div>
 
-                    <div class="flex-start-row mt-7 tecnologia-info">  
+                    <div class="flex-start-row mt-7 tecnologia-info">
                         <div>
                             <img src="svg/icon-eletrica.svg" class="icon" />
                             <h5 class="color-white bold my-1">Motor Elétrico</h5>
@@ -96,7 +96,7 @@
                             <img src="svg/icon-rastreador.svg" class="icon" />
                             <h5 class="color-white bold my-1">Rastreador</h5>
                             <p class="color-gray">Sabemos o quão preciosa é a sua Bikcraft, por isso adicionamos rastreadores e sistemas anti-furto para garantir o seu sossego.</p>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
                 <div class="grid-6 p-0 disappear">
@@ -104,6 +104,42 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- =========== SECTION PARCEIROS =========== -->
+    <section class="container parceiros">
+        <h1 class="color-black bold mb-8">nossos parceiros<span>.</span></h1>
+
+        <div class="row flex-start-row bb-white parceiros-grid fix-line">
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-caravan.png" alt="Caravan">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-ranek.png" alt="Ranek">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-handel.png" alt="Handel">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-dogs.png" alt="Dogs">
+            </div>
+        </div>
+
+        <div class="row flex-start-row parceiros-grid fix-line">
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-lescone.png" alt="LeScone">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-flexblog.png" alt="Flexblog">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-wildbeast.png" alt="wildbeast">
+            </div>
+            <div class="grid-3 flex-center">
+                <img src="img/parceiro-surfbot.png" alt="Surfbot">
+            </div>
+        </div>
+
     </section>
 
 
