Update: Section Depoimento

--- a/index.html
+++ b/index.html
@@ -142,6 +142,28 @@
 
     </section>
 
+    <!-- =========== SECTION DEPOIMENTO =========== -->
+    <section class="row">
+        <div class="flex depoimento">
+            <div class="w-50 bg">
+                <img src="img/img-depoimento.png" />
+            </div>
+            <div class="w-50 depoimento-info pl-8">
+                <h4 class="color-black">Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo.</h4>
+                <h6 class="color-black mt-4">Ana Júlia</h6>
+            </div>
+        </div>
+
+        <div class="depoimento-mobile">            
+            <div>
+                <p class="p1 color-black bold text-center pt-3 px-3">"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>                
+            </div>
+            <div class="flex-center py-2">
+                <img src="img/img-depoimento.png" class="profile" />
+                <p class="color-black ml-1">Ana Júlia</p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
