Update: Section Seguros

--- a/index.html
+++ b/index.html
@@ -154,15 +154,67 @@
             </div>
         </div>
 
-        <div class="depoimento-mobile">            
+        <div class="depoimento-mobile">
             <div>
-                <p class="p1 color-black bold text-center pt-3 px-3">"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>                
+                <p class="p1 color-black bold text-center pt-3 px-3">"Pedalar sempre foi a minha paixão, o que o pessoal da Bikcraft fez foi intensificar o meu amor por esta atividade. Recomendo à todos que amo."</p>
             </div>
             <div class="flex-center py-2">
                 <img src="img/img-depoimento.png" class="profile" />
                 <p class="color-black ml-1">Ana Júlia</p>
             </div>
         </div>
+    </section>
+
+    <!-- =========== SECTION SEGUROS =========== -->
+    <section class="bg-black-dark-soft">
+        <section class="container">
+            <h1 class="color-white bold mb-8">seguros<span>.</span></h1>
+
+            <div class="row flex-center flex-wrap">
+                <div class="grid-6 bg-black-dark seguros-card">
+                    <div>
+                        <div class="flex-space flex-wrap seguros-title">
+                            <h3 class="uppercase bold color-gray">Prata</h3>
+                            <div>
+                                <h3 class="bold color-white">R$ 199</h3>
+                                <blockquote class="p3 color-gray text-right">mensal</blockquote>
+                            </div>
+                        </div>
+
+                        <ul class="seguros-beneficios">
+                            <li class="p1 color-white mt-3">Duas trocas por ano</li>
+                            <li class="p1 color-white mt-3">Assistência técnica</li>
+                            <li class="p1 color-white mt-3">Suporte 08h às 18h</li>
+                            <li class="p1 color-white mt-3">Cobertura estadual</li>       
+                            <a href="" class="btn-2 mt-4">INSCREVA-SE</a>        
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="grid-6 bg-black-dark seguros-card">
+                    <div>
+                        <div class="flex-space flex-wrap seguros-title">
+                            <h3 class="uppercase bold color-primary">Ouro</h3>
+                            <div>
+                                <h3 class="bold color-white">R$ 299</h3>
+                                <blockquote class="p3 color-gray text-right">mensal</blockquote>
+                            </div>
+                        </div>
+
+                        <ul class="seguros-beneficios">
+                            <li class="p1 color-white mt-3">Cinco trocas por ano</li>
+                            <li class="p1 color-white mt-3">Assistência especial</li>
+                            <li class="p1 color-white mt-3">Suporte 24h</li>
+                            <li class="p1 color-white mt-3">Cobertura nacional</li>
+                            <li class="p1 color-white mt-3">Desconto em parceiros</li> 
+                            <li class="p1 color-white mt-3">Acesso ao Clube Bikcraft</li>   
+                            <a href="" class="btn mt-4">INSCREVA-SE</a>        
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+        </section>
     </section>
 
 </body>
