Update: Section Footer

--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                             <li class="p1 color-white mt-3">Duas trocas por ano</li>
                             <li class="p1 color-white mt-3">Assistência técnica</li>
                             <li class="p1 color-white mt-3">Suporte 08h às 18h</li>
-                            <li class="p1 color-white mt-3">Cobertura estadual</li>       
-                            <a href="" class="btn-2 mt-4">INSCREVA-SE</a>        
+                            <li class="p1 color-white mt-3">Cobertura estadual</li>
+                            <a href="" class="btn-2 mt-4">INSCREVA-SE</a>
                         </ul>
                     </div>
                 </div>
@@ -206,15 +206,59 @@
                             <li class="p1 color-white mt-3">Assistência especial</li>
                             <li class="p1 color-white mt-3">Suporte 24h</li>
                             <li class="p1 color-white mt-3">Cobertura nacional</li>
-                            <li class="p1 color-white mt-3">Desconto em parceiros</li> 
-                            <li class="p1 color-white mt-3">Acesso ao Clube Bikcraft</li>   
-                            <a href="" class="btn mt-4">INSCREVA-SE</a>        
+                            <li class="p1 color-white mt-3">Desconto em parceiros</li>
+                            <li class="p1 color-white mt-3">Acesso ao Clube Bikcraft</li>
+                            <a href="" class="btn mt-4">INSCREVA-SE</a>
                         </ul>
                     </div>
                 </div>
             </div>
 
         </section>
+    </section>
+
+    <!-- =========== SECTION FOOTER =========== -->
+    <section class="bg-black-dark">
+        <footer class="container">
+            <div class="row">
+                <div class="grid-2">
+                    <img src="svg/bikcraft.svg" class="logo" alt="Bikcraft" />
+                </div>
+
+                <div class="grid-1 disappear"></div>
+
+                <div class="grid-4">
+                    <div class="bb-black-soft pb-3">
+                        <h5 class="color-white uppercase">Contato</h5>
+                        <p class="color-gray my-1">+55 21 9999-9999</p>
+                        <p class="color-gray">contato@bikcraft.com</p>
+                    </div>
+
+                    <div class="bb-black-soft py-3">
+                        <p class="color-gray my-1">Rua Ali Perto, 42 - Botafogo</p>
+                        <p class="color-gray">Rio de Janeiro - RJ</p>
+                    </div>
+
+                    <div class="flex-start-row mt-3">
+                        <a href=""><img src="svg/icon-instagram.svg" class="pr-4" /></a>
+                        <a href=""><img src="svg/icon-facebook.svg" class="pr-4" /></a>
+                        <a href=""><img src="svg/icon-youtube.svg" class="pr-4" /></a>
+                    </div>
+                </div>
+
+                <div class="grid-1 disappear"></div>
+
+                <div class="grid-4">
+                    <h5 class="color-white uppercase">Informações</h5>
+                    <ul class="mt-1 footer-menu">
+                        <li><a href="" class="color-gray">Bicicletas</a></li>
+                        <li class="py-1"><a href="" class="color-gray">Seguros</a></li>
+                        <li class="py-1"><a href="" class="color-gray">Contato</a></li>
+                        <li><a href="" class="color-gray">Termos e Condições</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </section>
 
 </body>
