--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     </section>
 
     <!-- =========== SECTION DEPOIMENTO =========== -->
-    <section class="row">
+    <section class="row bg-black-dark-soft">
         <div class="flex depoimento">
             <div class="w-50 bg">
                 <img src="img/img-depoimento.png" />
@@ -260,6 +260,123 @@
             </div>
         </footer>
     </section>
+
+
+
+    <!-- =========== PAGES =========== -->
+
+    <!-- =========== PAGE BIKE =========== -->
+    <section class="bg-black-dark-soft">
+        <div class="container">
+            <div>
+                <p class="p1 color-gray uppercase">Escolha a melhor para você</p>
+                <h1 class="color-white bold">nossas bicicletas<span>.</span></h1>
+            </div>
+        </div>
+    </section>
+
+    <section class="container mt-8 mb-6 p-0">
+        <div class="row flex-center flex-wrap"> 
+            <div class="grid-6 bike-img relative">
+                <img src="img/bike-nimbus-stark-landscape.png" alt="Nimbus Stark" />
+            </div>
+
+            <div class="grid-6 pb-0 bike-info">
+                <h4 class="color-black bold relative pt-3">Nimbus Stark</h4>
+                <p class="color-black mt-3">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <div class="mt-3">
+                    <div class="flex-start-row">
+                        <img src="svg/icon-eletrica.svg" class="icon" />
+                        <h6 class="color-black ml-1">Motor Elétrico</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-carbono.svg" class="icon" />
+                        <h6 class="color-black ml-1">Fibra de Carbono</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-velocidade.svg" class="icon" />
+                        <h6 class="color-black ml-1">40 km/h</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-rastreador.svg" class="icon" />
+                        <h6 class="color-black ml-1">Rastreador</h6>
+                    </div>
+                </div>
+                <div class="flex-end-row btn-more">
+                    <a href="" class="btn uppercase">Mais sobre ➔</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container container-black mt-8 mb-6 p-0">
+        <div class="row flex-center flex-wrap"> 
+            <div class="grid-6 bike-img relative">
+                <img src="img/bike-magic-might-landscape.png" alt="Magic Might" />
+            </div>
+
+            <div class="grid-6 pb-0 bike-info">
+                <h4 class="color-white bold relative pt-3">Magic Might</h4>
+                <p class="color-gray mt-3">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <div class="mt-3">
+                    <div class="flex-start-row">
+                        <img src="svg/icon-eletrica.svg" class="icon" />
+                        <h6 class="color-gray ml-1">Motor Elétrico</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-carbono.svg" class="icon" />
+                        <h6 class="color-gray ml-1">Fibra de Carbono</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-velocidade.svg" class="icon" />
+                        <h6 class="color-gray ml-1">40 km/h</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-rastreador.svg" class="icon" />
+                        <h6 class="color-gray ml-1">Rastreador</h6>
+                    </div>
+                </div>
+                <div class="flex-end-row btn-more">
+                    <a href="" class="btn uppercase">Mais sobre ➔</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container mt-8 mb-6 p-0">
+        <div class="row flex-center flex-wrap"> 
+            <div class="grid-6 bike-img relative">
+                <img src="img/bike-nebula-cosmic-landscape.png" alt="Nebula Cosmic" />
+            </div>
+
+            <div class="grid-6 pb-0 bike-info">
+                <h4 class="color-black bold relative pt-3">Nebula Cosmic</h4>
+                <p class="color-black mt-3">A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                <div class="mt-3">
+                    <div class="flex-start-row">
+                        <img src="svg/icon-eletrica.svg" class="icon" />
+                        <h6 class="color-black ml-1">Motor Elétrico</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-carbono.svg" class="icon" />
+                        <h6 class="color-black ml-1">Fibra de Carbono</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-velocidade.svg" class="icon" />
+                        <h6 class="color-black ml-1">40 km/h</h6>
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <img src="svg/icon-rastreador.svg" class="icon" />
+                        <h6 class="color-black ml-1">Rastreador</h6>
+                    </div>
+                </div>
+                <div class="flex-end-row btn-more">
+                    <a href="" class="btn uppercase">Mais sobre ➔</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
