Update: :construction: Page Bike Internal

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
     <!-- =========== PAGES =========== -->
 
-    <!-- =========== PAGE BIKE =========== -->
+    <!-- =========== PAGE BIKES =========== -->
     <section class="bg-black-dark-soft">
         <div class="container">
             <div>
@@ -276,7 +276,7 @@
     </section>
 
     <section class="container mt-8 mb-6 p-0">
-        <div class="row flex-center flex-wrap"> 
+        <div class="row flex-center flex-wrap">
             <div class="grid-6 bike-img relative">
                 <img src="img/bike-nimbus-stark-landscape.png" alt="Nimbus Stark" />
             </div>
@@ -310,7 +310,7 @@
     </section>
 
     <section class="container container-black mt-8 mb-6 p-0">
-        <div class="row flex-center flex-wrap"> 
+        <div class="row flex-center flex-wrap">
             <div class="grid-6 bike-img relative">
                 <img src="img/bike-magic-might-landscape.png" alt="Magic Might" />
             </div>
@@ -344,7 +344,7 @@
     </section>
 
     <section class="container mt-8 mb-6 p-0">
-        <div class="row flex-center flex-wrap"> 
+        <div class="row flex-center flex-wrap">
             <div class="grid-6 bike-img relative">
                 <img src="img/bike-nebula-cosmic-landscape.png" alt="Nebula Cosmic" />
             </div>
@@ -376,6 +376,89 @@
             </div>
         </div>
     </section>
+
+    <!-- =========== PAGE BIKES-INTERNA-NIMBUS =========== -->
+
+    <section class="bg-black-dark-soft">
+        <div class="container">
+            <div>
+                <h5 class="color-gray">R$ 4999</h5>
+                <h1 class="color-white bold">Nimbus Stark<span>.</span></h1>
+            </div>
+
+            <section class="row">
+                <section class="grid-6 border">
+                    <div>
+                        <img src="img/bike-nimbus-stark-landscape.png" />
+                    </div>
+                    <div class="flex-start-row mt-2">
+                        <div class="w-50">
+                            <img src="img/bike-magic-might-landscape.png" />
+                        </div>
+
+                        <div class="w-50 ml-2">
+                            <img src="img/bike-nebula-cosmic-landscape.png" />
+                        </div>
+                    </div>
+                </section>
+
+                <section class="grid-6 border">
+                    <div>
+                        <p class="p1 color-gray">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+                        <div class="flex-start-row mt-4 bike-action">
+                            <a href="" class="btn uppercase">Comprar agora</a>
+                            <div class="ml-2 w-50 pills">
+                                <div class="pill flex-start-row">
+                                    <img src="svg/icon-entrega.svg" class="icon" />
+                                    <p class="p1 ml-1">entrega em 5 dias</p>
+                                </div>
+                                <div class="pill flex-start-row">
+                                    <img src="svg/icon-estoque.svg" class="icon" />
+                                    <p class="p1 ml-1">18 em estoque</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mt-5">
+                        <h6 class="h7 uppercase color-white">Informações</h6>
+                        <div class="bike-internal-tech mt-2 bg-black-dark p-4">
+                            <div>
+                                <div>
+                                    <img src="svg/icon-eletrica.svg" class="icon" />
+                                    <h5 class="color-white bold mb-1">Motor Elétrico</h5>
+                                    <p class="color-gray">Permite você viajar distâncias inimaginaveis com a sua bike.</p>
+                                </div>
+                                <div class="mt-4">
+                                    <img src="svg/icon-rastreador.svg" class="icon" />
+                                    <h5 class="color-white bold mb-1">Rastreador</h5>
+                                    <p class="color-gray">Rastreador e sistema anti-furto para garantir o seu sossego.</p>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div>
+                                    <img src="svg/icon-velocidade.svg" class="icon" />
+                                    <h5 class="color-white bold mb-1">40 km/h</h5>
+                                    <p class="color-gray">A mais rápida bicicleta elétrica disponível hoje no mercado.</p>
+                                </div>
+                                <div class="mt-4">
+                                    <img src="svg/icon-carbono.svg" class="icon" />
+                                    <h5 class="color-white bold mb-1">Fibra de Carbono</h5>
+                                    <p class="color-gray">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </section>
+            </section>
+
+        </div>
+    </section>
+
+
 
 
 </body>
