:construction: Page Bike Internal

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             </div>
 
             <section class="row">
-                <section class="grid-6 border">
+                <section class="grid-6">
                     <div>
                         <img src="img/bike-nimbus-stark-landscape.png" />
                     </div>
@@ -402,7 +402,7 @@
                     </div>
                 </section>
 
-                <section class="grid-6 border">
+                <section class="grid-6">
                     <div>
                         <p class="p1 color-gray">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
                         <div class="flex-start-row mt-4 bike-action">
@@ -448,8 +448,37 @@
                                     <p class="color-gray">Maior proteção possível para a sua Bikcraft com fibra de carbono.</p>
                                 </div>
                             </div>
-
                         </div>
+                    </div>
+
+                    <div class="mt-5">
+                        <h6 class="h7 uppercase color-white">Ficha técnica</h6>
+                        <ul class="mt-3 p-4 bg-black-dark bike-datasheet">
+                            <li class="flex-space bb-black py-1">
+                                <p class="color-gray">Peso</p>
+                                <p class="color-gray">9 kg</p>
+                            </li>
+                            <li class="flex-space bb-black py-1">
+                                <p class="color-gray">Altura</p>
+                                <p class="color-gray">60 cm</p>
+                            </li>
+                            <li class="flex-space bb-black py-1">
+                                <p class="color-gray">Largura</p>
+                                <p class="color-gray">120 cm</p>
+                            </li>
+                            <li class="flex-space bb-black py-1">
+                                <p class="color-gray">Profundidade</p>
+                                <p class="color-gray">10 cm</p>
+                            </li>
+                            <li class="flex-space bb-black py-1">
+                                <p class="color-gray">Marchas</p>
+                                <p class="color-gray">16</p>
+                            </li>
+                            <li class="flex-space py-1">
+                                <p class="color-gray">Roda</p>
+                                <p class="color-gray">29</p>
+                            </li>
+                        </ul>
                     </div>
 
                 </section>
