Update: Page Bikes Internal

--- a/index.html
+++ b/index.html
@@ -378,7 +378,6 @@
     </section>
 
     <!-- =========== PAGE BIKES-INTERNA-NIMBUS =========== -->
-
     <section class="bg-black-dark-soft">
         <div class="container">
             <div>
@@ -487,7 +486,40 @@
         </div>
     </section>
 
+    <section class="container">
+        <h1 class="color-black bold">escolha a sua<span>.</span></h1>
+        <div class="row mt-5">
+            <div class="grid-6 p-0 card-bike">
+                <img src="img/bike-magic-might-landscape.png" alt="Magic Might" />
+                <div class="mt-2 ml-3">
+                    <h4 class="color-black bold relative">Magic Might</h4>
+                    <p>R$ 2499</p>
+                </div>
+            </div>
+            <div class="grid-6 p-0 card-bike">
+                <img src="img/bike-nebula-cosmic-landscape.png" alt="Nebula Cosmic" />
+                <div class="mt-2 ml-3">
+                    <h4 class="color-black bold relative">Nebula Cosmic</h4>
+                    <p>R$ 3999</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <section class="bg-black-dark-soft shaddow-white-full">
+        <div class="container p-0 seguros-mobile">
+            <div class="row flex-center flex-wrap">
+                <div class="grid-6">
+                    <img src="img/img-seguros.png" />
+                </div>
+                <div class="grid-6">
+                    <h2 class="color-white bold">Pedale mais tranquilo com o nosso <span>seguro.</span></h2>
+                    <p class="mt-4">Inscreva-se em um dos planos do nosso seguro Bikcraft e aproveite diversos benefícios.</p>
+                    <a href="" class="btn uppercase mt-2">Conheça mais</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </body>
